# minecraft-clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  imgui.ini  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: main.yml
res/Shader/: Cube.frag
shaders/: draw.glsl  shared.inl
src/: Main.cpp  camera.cpp  camera.hpp  chunk.hpp  main.cpp  textures.hpp  window.hpp
src/Client/Data/: Chunk.cpp  Chunk.h
src/Client/Graphics/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
